# launcher2

./: .gitignore  README.md  build.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: app.css  app.tsx  main.css  main.tsx  old_retrac.d.ts  retrac.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: launch.rs  lib.rs  main.rs
src-tauri/src/modules/: admin.rs  chunker.rs  commands.rs  launch.rs  mod.rs  process.rs  util.rs
src/axios/: client.ts  endpoints.ts  responses.d.ts
src/components/: frame.tsx  router.tsx
src/components/banner/: banner.tsx  parent.tsx
src/components/core/: account.tsx  authorise.tsx  boostrap.tsx  bootstrap.tsx  default.tsx  download.tsx  frame.tsx  hover.tsx  listeners.tsx  option.tsx  update.tsx
src/components/navigation/: drawer.tsx  friends.tsx  item.tsx
src/components/routes/app/: index.tsx
src/components/routes/app/clans/: page.tsx
src/components/routes/app/competitive/: page.tsx
src/components/routes/app/downloads/: downloading.tsx  entry.tsx  page.tsx
src/components/routes/app/editor/: page.tsx
src/components/routes/app/home/: character.tsx  matches.tsx  page.tsx
src/components/routes/app/home/widgets/: character.tsx  donate.tsx  events.tsx  fortnite.tsx  lootlabs.tsx  matches.tsx  news.tsx  news_modal.tsx  panels.tsx  statistics.tsx
src/components/routes/app/leaderboard/: item.tsx  page.tsx
src/components/routes/app/settings/: option.tsx  page.tsx
src/components/routes/app/shop/: page.tsx
src/components/routes/app/status/: filters.tsx  matches.tsx  page.tsx  server.tsx
src/components/routes/app/store/: effect.tsx  package.tsx  page.tsx
src/components/routes/dev/: page.tsx
src/components/routes/downloads/: downloading.tsx  page.tsx
src/components/routes/home/: page.tsx
src/components/routes/login/: page.tsx
src/components/routes/update/: page.tsx
src/components/visual/: account.tsx  background_gradient.tsx  background_image.tsx  border_fix.tsx  snow.tsx
src/components/visual/banner/: parent.tsx
src/components/visual/navigation/: drawer.tsx  friends.tsx  window_bar.tsx
src/helpers/: time.ts
src/import/: ui.tsx
src/invoke/: index.ts  invoke.d.ts
src/socket/: event_down.d.ts  event_up.d.ts  export.ts  handler.ts  index.ts  retrac_socket.ts
src/sockets/: event_down.d.ts  event_up.d.ts  export.ts  index.ts  retrac_socket.ts
src/tauri/: index.ts  invoke.d.ts
src/wrapper/: aggregated_stats.ts  banner.ts  download.ts  friends.ts  hover.ts  leaderboard.ts  library.ts  matches.ts  options.ts  purchased_products.ts  retrac.ts  server.ts  tauri.ts  user.ts  usernames.ts
