[package]
name = "retrac"
version = "0.1.0"
description = "The game launcher for Retrac, an OG Fortnite Experience."
authors = ["ectrc"]
edition = "2021"

[lib]
name = "retrac_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winver = "1.0.0"

tauri = { version = "2.5.0", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
