[package]
name = "retrac"
version = "0.1.0"
description = "The game launcher for Retrac, an OG Fortnite Experience."
authors = ["ectrc"]
edition = "2021"

[lib]
name = "retrac_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "handleapi", "minwindef", "synchapi", "errhandlingapi"] }
widestring = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30.5"
winver = "1.0.0"
regex = "1"

tauri = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
